flex wrap in big screen: all fixed

--- a/feature.css
+++ b/feature.css
@@ -9,15 +9,16 @@
     margin: 0 auto;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 .feature-item{
     z-index: 12;
     height: 300px;
-    width: 30%;
+    max-width: 260px;
     /* background: transparent; */
     margin: 5px;
-    padding: 20px;
+    padding: 5px;
 }
 
 .icon {
